--- a/views/verify.html
+++ b/views/verify.html
@@ -2,20 +2,22 @@
 
 {% block content %}
 
-    <div class="container mx-auto mt-16 mb-4">
-        <h1 class="text-2xl font-bold text-center mb-4">تأكيد التسجيل</h1>
+    <div class="bg-white mb-10 py-6 shadow-sm">
+        <h1 class="text-2xl font-bold text-center">تأكيد التسجيل</h1>
+    </div>
 
-        <div>
+    <div class="container mx-auto mt-16 mb-4">
+        <div class="bg-white p-4 max-w-2xl rounded-md shadow-md mx-auto">
             <p class="text-center text-xl mb-8">برجاء إدخال الكود الذي تم إرساله على هاتفك</p>
-            <div class="md:flex md:items-center">
+            <div class="md:flex md:items-center text-center justify-center">
                 <label for="code" class="md:w-10 block mb-2 md:mb-0">الكود</label>
                 <div class="block">
-                    <input type="text" class="border rounded-md border-gray-600 outline-none focus:border-gray-900 p-2 w-full" name="code" id="code" required>
+                    <input type="text" class="border rounded-sm border-gray-600 outline-none focus:border-gray-900 p-2 w-full" name="code" id="code" required>
                     {% if flash.errors[0].code %}
                         <p class="text-red-600 text-sm">{{ flash.errors[0].code }}</p>
                     {% endif %}
                 </div>
-                <button class="bg-green-600 hover:bg-green-700 transition-colors duration-300 text-white px-4 py-2 rounded-md md:mr-1 mt-2 md:mt-0">تحقق</button>
+                <button class="bg-green-600 shadow-md hover:shadow-lg hover:bg-green-700 transition duration-300 text-white px-4 py-2 rounded-md md:mr-1 mt-2 md:mt-0">تحقق</button>
             </div>
         </div>
 
