--- a/views/verify.html
+++ b/views/verify.html
@@ -8,7 +8,7 @@
 
     <div class="container mx-auto mt-16 mb-4">
         <div class="bg-white p-4 max-w-2xl rounded-md shadow-md mx-auto">
-            <p class="text-center text-xl mb-8">برجاء إدخال الكود الذي تم إرساله على هاتفك</p>
+            <p class="text-center text-xl mb-8">برجاء إدخال الكود الذي تم إرساله إلى هاتفك</p>
             <div class="md:flex md:items-center text-center justify-center">
                 <label for="code" class="md:w-10 block mb-2 md:mb-0">الكود</label>
                 <div class="block">
