--- a/views/home.html
+++ b/views/home.html
@@ -7,8 +7,42 @@
     <div class="container mx-auto mb-4">
 
         <div class="bg-white p-4 max-w-4xl rounded-md shadow-md mx-auto">
+            <img src="/img/tos.jpg" class="text-center max-w-full mb-2" alt="">
+            <h1 class="text-center text-2xl mb-2">مجموعة الخدمات الطبيه الطارئة</h1>
+            <p class="mb-2 text-center">للأنضمام للمجموعة عليك قراءة الشروط التالية والموافقة عليها:</p>
             <div class="border border-gray-400 p-2 text-gray-900">
-                <p>لوريم إيبسوم(Lorem Ipsum) هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما قامت مطبعة مجهولة برص مجموعة من الأحرف بشكل عشوائي أخذتها من نص، لتكوّن كتيّب بمثابة دليل أو مرجع شكلي لهذه الأحرف. خمسة قرون من الزمن لم تقضي على هذا النص، بل انه حتى صار مستخدماً وبشكله الأصلي في الطباعة والتنضيد الإلكتروني. انتشر بشكل كبير في ستينيّات هذا القرن مع إصدار رقائق "ليتراسيت" (Letraset) البلاستيكية تحوي مقاطع من هذا النص، وعاد لينتشر مرة أخرى مؤخراَ مع ظهور برامج النشر الإلكتروني مثل "ألدوس بايج مايكر" (Aldus PageMaker) والتي حوت أيضاً على نسخ من نص لوريم إيبسوم. </p>
+                <p class="text-red-700">عدم التزامك بالشروط يعني حظر نهائي !</p>
+                <p class="mb-2">هدف المجموعه: هو مشاركة المعلومات فيما بيننا والتركيز على التحضير لأختبار الهيئة لنجاح اكبر عدد ممكن ان شاء الله..</p>
+
+                <ol class="list-decimal pr-4">
+                    <li class="mb-1">
+                        <p>لا يمكنك وممنوع تماماً الأعلان للمدرسين الخصوصيين او الدورات او المؤتمرات او توزيع حسابات التواصل الأجتماعي وأرقام الهواتف او مجموعات وقنوات اخرى.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>غير مرحب بالمدرسين الخصوصيين معنا بالمجموعه وممنوع منع تااام الأعلان لهم.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>غير مرحب بالأعضاء من خارج المملكة العربية السعودية.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>غير مرحب بايي تخصص  من خارج دائرة الخدمات الطبيه الطارئة باراميدك اخصائي او فني او غيره.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>ممنوع النقاشات والمحادثات الجانبيه الخارجه عن هدف تجمعنا، وعنوان المجموعه التحضير لأختبار الهيئة باراميدك،هدف المجموعة هو تخصص الخدمات الطبيه الطارئة.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>البعد عن الجدالات والسخرية والألفاظ الجارحه وأذيه الأخريين واستفزازهم  بالكلام ونشر الأشاعات الكاذبة.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>ممنوع مضايقه الأخرين برسائلك بالخاص خصوصاً البنات,اذا عندك سؤال اطرحه بالمجموعه،استأذن من الشخص بالمجموعه قبل مراسلته بالخاص، ممنوع تماماً ارسال لأعضاء المجموعه رسائل دعائيه بالخاص.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>ممنوع منعاً باتاً نشر ايي صور مسربة من أختبارات سابقة,صاحب المجموعة يخلي مسؤوليته التامه, واي مسائلة قانونية تقع على عاتق الشخص الناشر للمخالفة وليس صاحب المجموعة.</p>
+                    </li>
+                    <li class="mb-1">
+                        <p>عند مخالفة احدى هذه النقاط يتم حظر واستبعاد العضو.</p>
+                    </li>
+                </ol>
             </div>
     
             <div class="mt-2">
