--- a/views/verify.html
+++ b/views/verify.html
@@ -6,9 +6,9 @@
         <h1 class="text-2xl font-bold text-center">تأكيد التسجيل</h1>
     </div>
 
-    <div class="container mx-auto mt-16 mb-4">
+    <div class="container mx-auto mt-8 mb-4">
         <div class="bg-white p-4 max-w-2xl rounded-md shadow-md mx-auto">
-            <p class="text-center text-xl mb-8">برجاء إدخال الكود الذي تم إرساله إلى هاتفك</p>
+            <p class="text-center text-xl mb-8">الرجاء إدخال الكود الذي تم إرساله إلى هاتفك</p>
             <div class="md:flex md:items-center text-center justify-center">
                 <label for="code" class="md:w-10 block mb-2 md:mb-0">الكود</label>
                 <div class="block">
@@ -17,7 +17,7 @@
                         <p class="text-red-600 text-sm">{{ flash.errors[0].code }}</p>
                     {% endif %}
                 </div>
-                <button class="bg-green-600 shadow-md hover:shadow-lg hover:bg-green-700 transition duration-300 text-white px-4 py-2 rounded-md md:mr-1 mt-2 md:mt-0">تحقق</button>
+                <button class="bg-green-600 shadow-md hover:shadow-lg hover:bg-green-700 transition duration-300 text-white px-4 py-2 rounded-md md:mr-1 mt-2 md:mt-0" onclick="verify()">تحقق</button>
             </div>
         </div>
 
@@ -26,9 +26,42 @@
 {% endblock %}
 
 {% block afterload %}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
-
+        function verify() {
+            if (document.getElementById('code').value !== '') {
+                document.getElementById('code').classList.remove('border-red-600');
+                axios({
+                    url: '/verify/{{ token }}',
+                    method: 'POST',
+                    headers: {
+                        'CSRF-Token': '{{ _csrf }}'
+                    },
+                    data: {
+                        code: document.getElementById('code').value
+                    }
+                }).then(function(response) {
+                    if (response.data != undefined && response.data.status == '1') {
+                        Swal.fire(response.data.message,
+                        "سيتم تحويلك إلى المجموعة",
+                        'success').then(() => {
+                            location.replace("{{ groupUrl }}")
+                        })
+                    }
+                    else if (response.data.status == '0') {
+                        Swal.fire(response.data.message,
+                        "",
+                        'error')
+                    }
+                }).catch(function(error) {
+                    console.log(error);
+                })
+            }
+            else {
+                document.getElementById('code').classList.add('border-red-600');
+            }
+        }
     </script>
 
 {% endblock %}
