--- a/views/register.html
+++ b/views/register.html
@@ -340,6 +340,7 @@
                         {% if flash.errors[0].phone %}
                             <p class="text-red-600 text-sm">{{ flash.errors[0].phone }}</p>
                         {% endif %}
+                        <p class="text-xs mt-1 text-gray-700">سيتم ارسال كود تفعيل للرقم</p>
                     </div>
                 </div>
             
