--- a/views/admin/settings.html
+++ b/views/admin/settings.html
@@ -26,6 +26,10 @@
             <input type="text" name="name" value="{{ user.name }}" id="name" class="form-control" required>
         </div>
         <div class="form-group">
+            <label for="telegramId">معرف التليجرام</label>
+            <input type="number" name="telegramId" value="{{ user.telegramId }}" id="telegramId" class="form-control" required>
+        </div>
+        <div class="form-group">
             <label for="email">الإيميل</label>
             <input type="email" name="email" value="{{ user.email }}" id="email" class="form-control" required>
         </div>
