--- a/views/admin/users/index.html
+++ b/views/admin/users/index.html
@@ -41,8 +41,10 @@
                     <td>{{ user.ipAddress }}</td>
                     <td>{{ user.status }}</td>
                     <td>
-                        {% if user.status != 'banned' %}
-                        <button class="btn btn-warning btn-sm" onclick="confirmBan({{ user.telegramId }})">حظر</button>
+                        {% if user.status == 'not verified' %}
+                          <button class="btn btn-success btn-sm" onclick="confirmVerify({{ user.telegramId }})">تفعيل</button>
+                        {% elif user.status != 'banned' %}
+                          <button class="btn btn-warning btn-sm" onclick="confirmBan({{ user.telegramId }})">حظر</button>
                         {% endif %}
                         <button class="btn btn-danger btn-sm" onclick="confirmDelete({{ user.telegramId }})">حذف</button>
                     </td>
@@ -109,6 +111,35 @@
           })
     }
 
+    function confirmVerify(telegramId) {
+        Swal.fire({
+            title: 'هل تريد تفعيل هذا الحساب؟',
+            text: "",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'نعم',
+            cancelButtonText: 'لا',
+          }).then((result) => {
+            if (result.isConfirmed) {
+              $.ajax({
+                  method: "POST",
+                  url: `/admin/users/${telegramId}/verify`,
+                  headers: {
+                    'CSRF-Token': "{{ _csrf }}"
+                  },
+                  success: function(res) {
+                    Swal.fire(
+                        res.message,
+                        "",
+                        res.status == '0' ? 'error' : 'success',
+                      ).then(() => { location.reload() })
+                  }
+              })
+            }
+          })
+    }
     function confirmDelete(telegramId) {
         Swal.fire({
             title: 'هل تريد حذف هذا الحساب؟',
