--- a/views/layouts/master.html
+++ b/views/layouts/master.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التسجيل في المواد العلمية</title>
+    <title>الخدمات الطبيه الطارئة</title>
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/main.css">
 </head>
