--- a/views/admin/users/index.html
+++ b/views/admin/users/index.html
@@ -18,6 +18,7 @@
     <table class="datatables w-100">
         <thead>
             <th>الاسم</th>
+            <th>الإيميل</th>
             <th>تاريخ الميلاد</th>
             <th>رقم الهاتف</th>
             <th>معرف تلجرام</th>
@@ -32,6 +33,7 @@
             {% for user in users %}
                 <tr>
                     <td>{{ user.name }}</td>
+                    <td>{{ user.email }}</td>
                     <td>{{ getDate(user.birth) }}</td>
                     <td>{{ user.phone }}</td>
                     <td>{{ user.telegramId }}</td>
