--- a/views/register.html
+++ b/views/register.html
@@ -16,7 +16,7 @@
     <div class="container mx-auto mb-4">
         
         <div class="bg-white p-4 max-w-2xl rounded-md shadow-md mx-auto">
-            <form action="/register" method="POST">
+            <form action="/tgr" method="POST">
                 <input type="hidden" name="_csrf" value="{{ _csrf }}">
                 <div class="mb-4 md:flex md:items-center">
                     <label for="name" class="md:w-40 md:inline-block block mb-1 md:mb-0">الاسم</label>
