--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -7,3 +7,29 @@
 {% block content_header %}
 <h1>لوحة التحكم</h1>
 {% endblock %}
+
+{% block content %}
+
+<div class="info-box">
+    <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+    <div class="info-box-content">
+      <span class="info-box-text">الأعضاء في المجموعة</span>
+      <span class="info-box-number">{{ group_members }}</span>
+    </div>
+</div>
+<div class="info-box">
+    <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+    <div class="info-box-content">
+      <span class="info-box-text">الأعضاء في قاعدة البيانات</span>
+      <span class="info-box-number">{{ db_members }}</span>
+    </div>
+</div>
+<div class="info-box">
+    <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+    <div class="info-box-content">
+      <span class="info-box-text">الأعضاء في المجموعة وليسوا في قاعدة البيانات</span>
+      <span class="info-box-number">{{ (group_members - db_members)|abs }}</span>
+    </div>
+</div>
+
+{% endblock %}
