change css colors

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="col-lg-4 col-12 col-md-6">
-        <div class="small-box bg-info">
+        <div class="small-box bg-success">
             <div class="inner">
                 <h3>{{ db_members }}</h3>
                 <p>الأعضاء في قاعدة البيانات</p>
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="col-lg-4 col-12 col-md-6">
-        <div class="small-box bg-info">
+        <div class="small-box bg-warning">
             <div class="inner">
                 <h3>{{ (group_members - db_members)|abs }}</h3>
                 <p>الأعضاء في المجموعة وليسوا في قاعدة البيانات</p>
