--- a/views/layouts/master.html
+++ b/views/layouts/master.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link {% if activeLink == 'tgc' or activeLink == 'tgr' %}active{% endif %}" aria-current="page" href="/tgc">التسجيل</a>
+            <a class="nav-link {% if activeLink == 'tgc' or activeLink == 'tgr' %}active{% endif %}" aria-current="page" href="/tgr">التسجيل</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if activeLink == 'telegram_id' %}active{% endif %}" href="/telegram_id">الحصول على معرف تلجرام</a>
