--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,8 @@ body {
 button, input, optgroup, select, textarea { font-family: var(--font-family); }
 
 .navbar {
-  background-color: #7b9c9e;
+  background-color: #fff;
+  box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.2);
 }
 
 .brand-logo__image {
